--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
   },
   "homepage": "https://github.com/Joe-Joseph/Banka#readme",
   "dependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/register": "^7.4.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/node": "^7.2.2"
+  },
+  "devDependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
@@ -26,10 +33,5 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "nodemon": "^1.18.10"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/register": "^7.4.0"
   }
 }
