--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --require @babel/register server/app"
+    "start": "nodemon --exec babel-node server/app"
   },
   "repository": {
     "type": "git",
