--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "@babel/core": "^7.4.0",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.2",
-    "@babel/register": "^7.4.0"
-  },
-  "devDependencies": {
+    "@babel/register": "^7.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
@@ -33,5 +31,6 @@
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "nodemon": "^1.18.10"
-  }
+  },
+  "devDependencies": {}
 }
