--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Banka",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc --reporter=text --reporter=lcov mocha --require @babel/register server/test/**/*.test.js --exit",
     "start": "nodemon --exec babel-node server/app"
   },
   "repository": {
@@ -32,5 +32,12 @@
     "moment": "^2.24.0",
     "nodemon": "^1.18.10"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "coveralls": "^3.0.3",
+    "mocha": "^6.0.2",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^13.3.0"
+  }
 }
