--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "nyc --reporter=text --reporter=lcov mocha --require @babel/register server/test/**/*.test.js --exit",
-    "start": "nodemon --exec babel-node server/app"
+    "start": "nodemon --exec babel-node server/app",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
