--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "coveralls": "^3.0.3",
     "mocha": "^6.0.2",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^13.3.0"
+    "nyc": "^13.3.0",
+    "superagent": "^5.0.2",
+    "supertest": "^4.0.2"
   }
 }
