--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
