--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "nyc --reporter=text --reporter=lcov mocha --require @babel/register server/test/**/*.test.js --exit",
     "start": "nodemon --exec babel-node server/app",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "./node_modules/.bin/eslint server/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -35,10 +36,20 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "coveralls": "^3.0.3",
-    "mocha": "^6.0.2",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "mocha": "^6.1.1",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^13.3.0"
   }
